--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,9 +24,9 @@
 #         pytest
 name: Project Tests
 on:
-  push:
-    branches:
-      - master
+#   push:
+#     branches:
+#       - master
   pull_request:
     branches:
       - master
