--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,32 +1,30 @@
-# name: push pr check
-
-# on:[push, pull_request]
-
-# jobs:
-
-#   test:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - uses: actions/checkout@v1
-#     - name: Set up Python 3.6
-#       uses: actions/setup-python@v1
-#       with:
-#         python-version: 3.6
-
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install -r requirements.txt
-
-#     - name: Test with pytest
-#       run: |
-#         pytest
-name: Project Tests
-on:
-#   push:
+# name: Project Tests
+# on:
+# #   push:
+# #     branches:
+# #       - master
+#   pull_request:
 #     branches:
 #       - master
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Set up Python 3.6
+#         uses: actions/setup-python@v1
+#         with:
+#           python-version: 3.6
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+#       - name: Test with pytest
+#         run: pytest
+
+name: Project Tests
+on:
   pull_request:
     branches:
       - master
@@ -34,6 +32,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      image: postgres:13
+      options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.6
@@ -45,4 +47,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Test with pytest
-        run: pytest -vv
+        run: pytest
