--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,3 +1,24 @@
+# name: Project Tests
+# on:
+#   pull_request:
+#     branches:
+#       - master
+
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v1
+#       - name: Set up Python 3.6
+#         uses: actions/setup-python@v1
+#         with:
+#           python-version: 3.6
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+#       - name: Test with pytest
+#         run: pytest
 name: Project Tests
 on:
   pull_request:
@@ -7,6 +28,16 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+         image: postgres:10.8
+         env:
+           POSTGRES_USER: postgres
+           POSTGRES_PASSWORD: postgres
+           POSTGRES_DB: github_actions
+         ports:
+           - 5432:5432
+         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v1
       - name: Set up Python 3.6
@@ -19,7 +50,6 @@ jobs:
           pip install -r requirements.txt
       - name: Test with pytest
         run: pytest
-
 # name: Project Tests
 # on:
 #   pull_request:
