--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,13 +17,13 @@ jobs:
         python-version: 3.6
     - name: Install Tools
       run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        python3 -m pip install --user --upgrade setuptools wheel
+        python3 -m pip install --user --upgrade twine
     - name: Package and Upload
       env:
         TANGRAM_VERSION: ${{ github.event.release.tag_name }}
         TWINE_USERNAME: tangram
         TWINE_PASSWORD: ${{ secrets.PYPI_APIKEY }}
       run: |
-        python setup.py sdist bdist_wheel
-        python twine upload --repository testpypi dist/*
+        python3 setup.py sdist bdist_wheel
+        python3 -m twine upload --repository testpypi dist/*
